# personalassistant

./: .env.example  .gitignore  CANDLE_INTEGRATION.md  CANDLE_PERFORMANCE.md  CONFIG.md  GPU_SUPPORT.md  INSTALLATION.md  LICENSE  LLAMA_CPP_INTEGRATION.md  LLAMA_CPP_TEST_RESULTS.md  README.md  STREAMING_DEMO.md  WINDOWS_BUILD_FIX.md  audio_playback_fix.md  config.toml.example  debug_activity_db.sh  debug_app.sh  diagnose_crane.sh  download-vosk-model.sh  index.html  package-lock.json  package.json  prd.md  run_cpu_only.sh  run_with_crane.sh  run_with_tinyllama.sh  setup-audio-transcription.sh  tailwind.config.js  test-chat.js  test_activity_tracking.js  test_audio.js  test_audio.md  test_candle.js  test_crane_cpu.sh  test_crane_metal.sh  test_llama_integration.sh  test_windows_audio.md  test_windows_audio.ps1  vite.config.ts
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  nightly.yml  test.yml
src/: App.tsx
src-tauri/: Cargo.toml  METAL_COMPATIBLE_MODELS.md  METAL_FIXES_SUMMARY.md  build.rs  download_tinyllama.sh  tauri.conf.json  test_bert_metal.rs  test_crane_cpu.rs  test_crane_init.sh  test_crane_metal_simple.rs  test_llama_cpp_metal.rs  test_llama_cpp_options.sh  test_llama_cpp_simple.rs  test_llama_manual.sh  test_model_download.py  test_t5_metal.py  verify_build.ps1
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  windows.json
src-tauri/examples/: browser_automation.rs  test_browser_search.rs  test_captcha_sites.rs  test_cdp.rs  test_chrome_launch.rs  test_dom_extraction_robust.rs  test_persistent_profile.rs  test_persistent_profile_dom.rs  test_persistent_profile_simple.rs  test_research_fixed.rs  test_research_persistent.rs  test_search_diversity.rs  test_search_extraction.rs
src-tauri/scripts/: cleanup_chrome.sh
src-tauri/src/: config.rs  error.rs  init.rs  lib.rs  main.rs
src-tauri/src/activity_tracking/: activity_aggregator.rs  app_watcher.rs  batch_writer.rs  history.rs  input_monitor.rs  mod.rs  optimized_tracker.rs  project_detector.rs  system_monitor.rs  tracker.rs  tracker_wrapper.rs
src-tauri/src/audio/: mod.rs  processor.rs  recorder.rs  simple_recorder.rs  transcriber.rs  windows_recorder.rs
src-tauri/src/browser_ai/: README.md  agent.rs  cdp_client.rs  chrome.rs  mod.rs  scraper.rs
src-tauri/src/database/: mod.rs  sqlite.rs
src-tauri/src/database/operations/: activities.rs  chat.rs  goals.rs  mod.rs  rag.rs  research.rs
src-tauri/src/goals/: mod.rs
src-tauri/src/llm/: bert_metal_backend.rs  callm_backend.rs  candle_backend.rs  crane_backend.rs  llama_cpp_backend.rs  llama_cpp_metal_backend.rs  llama_cpp_metal_backend_test.rs  llama_cpp_simple.rs  metal_candle_backend.rs  metal_compatible_backend.rs  mod.rs
src-tauri/src/models/: activity.rs  browser_ai.rs  chat.rs  goals.rs  mod.rs  productivity.rs
src-tauri/src/rag/: chunker.rs  document_processor.rs  embeddings.rs  enhanced_document_processor.rs  mod.rs  qdrant_store.rs  retriever.rs  vector_store.rs
src-tauri/src/services/: activity.rs  activity_flush.rs  audio.rs  browser_ai.rs  chat.rs  config.rs  config_manager.rs  embeddings.rs  file_manager.rs  goals.rs  inference.rs  llm.rs  mod.rs  productivity.rs  rag.rs  streaming_chat.rs
src-tauri/src/storage/: mod.rs
src-tauri/test_scripts/: debug_crane.rs  download_tokenizers.sh  test_crane_backend.rs  test_metal_compatible_models.rs  test_metal_inference.rs  test_metal_simple.rs
src-tauri/tests/: test_llama_gpu.rs
src/components/: ActivityMonitor.tsx  AudioRecorder.tsx  Dashboard.tsx  DocumentChat.tsx  DocumentManager.tsx  GoalsManager.tsx  ResearchAssistant.tsx  Settings.tsx  SimpleAudioRecorder.tsx  UnifiedChat.tsx
src/components/activity/: ActivityHistory.tsx  CurrentActivity.tsx
src/components/charts/: ActivityTimeline.tsx  ProductivityChart.tsx
src/components/chat/: ChatHistory.tsx  ChatInput.tsx  MessageList.tsx  ModeSelector.tsx  ResearchProgress.tsx  StreamingMessageList.tsx  ThinkingIndicator.tsx
src/components/goals/: CreateGoalModal.tsx  GoalProgress.tsx
src/components/layout/: Sidebar.tsx
src/components/research/: ResearchResults.tsx  SavedResearch.tsx
src/components/settings/: InferenceSettings.tsx
src/hooks/: useStreamingChat.ts
src/lib/: timeUtils.ts
src/styles/: globals.css
src/types/: index.ts  tauri.d.ts
