[package]
name = "personalassistant"
version = "0.1.0"
edition = "2021"

[lib]
name = "personalassistant_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
surrealdb = "2"
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
scraper = "0.21"
genai = "0.3.5"
playwright = "0.0.20"
regex = "1"
url = "2"
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.26"
core-graphics = "0.24"
core-foundation = "0.10"
dirs = "5"
cpal = "0.15"
hound = "3.5"
byteorder = "1.5"
rubato = "0.14"
ringbuf = "0.3"
crossbeam-channel = "0.5"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
# Document processing
lopdf = "0.30"
zip = "0.6"
walkdir = "2.4"
mime_guess = "2.0"
# Simplified approach - use system tools and enhanced Ollama
# vosk = "0.3.1"  # Commented out due to native library dependencies

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSDate", "NSArray", "NSBundle"] }
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSApplication"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
